# hypergraphical

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  OPEN_CODE_CHECKLIST.md  README.md  pyproject.toml  requirements.txt  setup.cfg  streamlit_hypergraphs.py  streamlit_test.py  tab0_mot_tab.py  tab1_undirect.py  tab2_direct.py  tox.ini  utils.py
.streamlit/: config.toml
markdown_text/: dir_hypergraphs.txt  graphs.txt  mm_description.txt  overview.txt  project_aims.txt  prototype.txt  purpose.txt  ref_list.txt  summary.txt  undir_hypergraphs.txt
src/: build_model.py  centrality.py  centrality_utils.py  create_figs.py  hyperarc_centrality.py  numpy_utils.py  progressions.py  tab0_mot_tab.py  tab1_undirect.py  tab2_direct.py  utils.py  weight_functions.py
src/hypergraphs/: hypergraphs.py
test_streamlit/: test_edge_count.py
workbooks/: hypergraph_animations.ipynb
