[metadata]
name = hypergraphs
version = 0.1.0
description = A repo containing animations explaining hypergraphs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nhsx/hypergraphical
author = Kevin Fasusi
license = MIT

[options]
python_requires >= 3.10
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
   tests*

[options.entry_points]
console_scripts =
    hypergraph = hypergraph.hypergraph:main